# hh

./: .clinerules  .gitignore  CLAUDE.md  DOCUMENTATION_UPDATE_SUMMARY.md  GRAPHRAG_IMPLEMENTATION_STATUS.md  GRAPHRAG_RECOMMENDATION.md  INTEGRATION_COMPLETE.md  MIGRATION_TO_GRAPHRAG.md
chat/: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  chainlit.md  chainlit_fa-IR.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
chat/alembic/: env.py
chat/docker/postgres/: init.sql
chat/scripts/: create_user.py  setup.sh
chat/src/: __init__.py  app.py
chat/src/agents/: __init__.py  nodes.py  state.py  workflow.py
chat/src/config/: settings.py
chat/src/models/: __init__.py  appointment.py  base.py  conversation.py  user.py
chat/src/services/: __init__.py  auth.py  database.py
data/: EPUB_ANALYSIS_SUMMARY.txt  GRAPHRAG_QUICK_REFERENCE.md  epub_analysis.json  epub_structure_summary.json  wills_eye_structured.json
docs/: GRAPHRAG_ARCHITECTURE.md  GRAPHRAG_PREPARATION_INDEX.md  GRAPHRAG_PREPARATION_TODO.md  GRAPHRAG_QUICK_REFERENCE.md  README.md
indexing/: .env.example  ERROR_HANDLING_GUIDE.md  OPENAI_EMBEDDINGS.md  PHASE2_COMPARISON.md  PHASE2_OUTPUT_DIR_USAGE.md  PHASE2_QUICKSTART.md  PHASE6_QUICKSTART.md  QUICKSTART.md  QUICKSTART_GRAPHRAG.md  README.md  README_PHASE2_LLM.md  RERUN_PHASE5_WITH_LLM.md  __init__.py  embedding_service.py  graph_builder.py  graphiti_client.py  graphrag_config.py  import_to_neo4j.py  index_knowledge_graph.py  indexing_results_20251014_234147.json  phase1_create_ddx_structures.py  (+11 more)
(+133 files in other folders)
